amend issues on offer to be more user friendly on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body {
 }
 
 /*navigation/ logo*/
-
 header {
     background-color: #3e4c33;
     text-align: center;
@@ -390,7 +389,6 @@ hr {
 }
 
 /*Testimonial*/
-
 #testimonial {
     height: auto;
     padding: 30px;
@@ -421,7 +419,6 @@ hr {
 }
 
 /*About me*/
-
 h1 {
     padding: 2em;
 }
@@ -579,7 +576,7 @@ textarea {
 
 /*style for offer.html*/
 #offer {
-    padding: 10px;
+    padding: 0px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -664,7 +661,6 @@ textarea {
 }
 
 /*Media queries - Hero images for smaller screens*/
-
 @media screen and (max-width: 800px) {
     #hero-image {
         height: 250px;
@@ -681,7 +677,6 @@ textarea {
     }
 
     #offer-hero {
-
         height: 250px;
         width: 100%;
         background: url('../images/herothrees.jpg') no-repeat center center;
@@ -700,13 +695,11 @@ textarea {
     #testimonial div {
         background-color: #a22d59;
         width: 100%;
-        /* Set width to 100% to take up the entire width */
         padding: 20px;
         border: 2px solid #3e4c33;
         border-radius: 10px;
         box-sizing: border-box;
         margin-bottom: 20px;
-        /* Add margin to create spacing between divs */
     }
 
     #testimonial h3 {
@@ -723,24 +716,25 @@ textarea {
 
     .offer-container {
         flex-direction: row;
-        /* Revert to row layout on larger screens */
-    }
-
-    .offer-content {
-        flex-direction: row;
         align-items: flex-start;
         text-align: left;
-        padding: 20px;
+        padding: 5px;
         margin-bottom: 0;
     }
 
-    .offer-type {
-        margin-left: 20px;
-    }
+    /*.offer-content {
+        flex-direction: row;
+        align-items: flex-start;
+        text-align: left;
+        padding: 10px;
+        margin-bottom: 0;
+    }*/
 
-    .submit {
-        display: block;
-        float: right;
+    .offer-type {
+        width: 100%;
+        margin-top: 15px;
+        margin-left: 0;
+
     }
 
     .offer-container {
@@ -755,6 +749,11 @@ textarea {
         max-width: 100%;
         max-height: auto;
         float: none;
+    }
+
+    .submit {
+        display: block;
+        float: right;
     }
 
 }
